# Test_task

./: .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml
LLM-service/: main.py
LLM-service/core/: __init__.py  config.py
LLM-service/crud/: __init__.py  check_existence.py  parse_crud.py  schemas.py
LLM-service/db/: __init__.py  db_helper.py  session.py
LLM-service/db/models/: schemas.py
Telethon/: __init__.py  check_existence.py
app/: Dockerfile  README.md  main.py  pyproject.toml
app/Telethon/: check_existence.py
app/core/: __init__.py  bot.py  config.py  hash_password.py
app/db/: __init__.py  db_helper.py  session.py
app/db/crud/: channel_crud.py  schemas.py
app/db/models/: __init__.py  schemas.py
app/fsm/: channel_states.py
app/llm_connection/: __init__.py  llm_answer.py
app/notify/: __init__.py  notify_user.py
app/routes/: __init__.py  api_router.py  manageChannel.py  start.py
app/telethon_api/: __init__.py  check_existence.py
app/text_batton/: __init__.py  batton.py
app/text_batton/text_storage/: ru.json
core/: config.py
db/: __init__.py  db_helper.py  structure.txt
db/models/: __init__.py  schemas.py
db/сrud/: channel_crud.py  user_crud.py
fsm/: __init__.py  channel_states.py
llm_service/: Dockerfile  README.md  main.py  pyproject.toml
llm_service/core/: __init__.py  config.py
llm_service/yandex_gpt/: __init__.py  generate_answer.py  model_message.py
routes/: manageChannel.py  manage_channel.py  start.py
storage/: channel_store.py
text_batton/: __init__.py  language.py
text_batton/text_storage/: ru.json
