[tool.poetry]
name = "app"
version = "0.1.0"
description = "This microservice implements the entire project logic as a whole and serves as a link between a small additional server and the llm model."
authors = ["DanyProts <protsenkodan@gmail.com>"]
readme = "README.md"
packages = [{ include = "core" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pydantic = ">=2.11.7,<3.0.0"
pydantic-settings = ">=2.10.1,<3.0.0"
asyncio = "^3.4.3"
aiogram = "^3.21.0"
sqlalchemy = "^2.0.41"
asyncpg = "^0.30.0"
telethon = "^1.40.0"
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
httpx = "^0.28.1"
bcrypt = "^4.3.0"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
